--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev-Board</title>
-    <!-- tailwind and daisyUi cdn -->
-
+    <!-- Tailwind CSS and DaisyUI CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- google fonts -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,7 +27,185 @@
     </style>
   </head>
   <body class="poppins-regular">
-    <header></header>
-    <main></main>
+    <!-- Header Section -->
+    <header class="md:container mx-auto">
+      <nav>
+        <div class="navbar bg-base-100">
+          <div class="navbar-start">
+            <img src="assets/logo.png" alt="" />
+            <a class="btn btn-ghost text-3xl font-normal"
+              >Dev <span class="font-bold">Board</span></a
+            >
+          </div>
+          <div class="navbar-end space-x-4">
+            <img src="assets/checkbox.png" alt="" />
+            <p class="font-bold text-3xl">23</p>
+            <a class="btn"><img src="assets/theme-btn.png" alt="" /></a>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Main Content Section -->
+    <section class="md:container mx-auto mt-10">
+      <div class="grid grid-cols-4 gap-x-8 gap-y-10">
+        <!-- First Column -->
+        <div
+          class="flex flex-row justify-center items-center gap-2 w-56 bg-[#F4F7FF]"
+        >
+          <img class="w-12 h-12" src="assets/checkbox.png" alt="" />
+          <div>
+            <p>Task Assigned</p>
+            <p>05</p>
+          </div>
+        </div>
+
+        <!-- Second Column -->
+        <div class="bg-blue-300 w-fit p-4">
+          <div class="flex flex-row justify-center items-center gap-2">
+            <img src="assets/board.png" alt="" />
+            <p>Discover Something New Today!</p>
+          </div>
+        </div>
+
+        <!-- Third Column -->
+        <div
+          class="flex flex-row justify-center items-center w-56 gap-2 bg-[#F4F7FF]"
+        >
+          <img class="w-12 h-12" src="assets/calender.png" alt="" />
+          <p>
+            Wed , <br />
+            Jul 28 2025
+          </p>
+        </div>
+
+        <!-- Activity Section (Right Side) -->
+        <div
+          class="row-span-3 col-span-1 bg-[#E5E7EB] p-4 rounded-lg space-y-4"
+        >
+          <div class="flex flex-row justify-start items-center gap-2">
+            <img src="assets/activity.png" alt="" class="w-8 h-8" />
+            <p class="font-medium">Activity Log</p>
+          </div>
+          <button class="btn bg-blue-700 text-white w-full">
+            Clear History
+          </button>
+        </div>
+
+        <!-- Task Cards Grid -->
+        <div class="col-span-3 grid grid-cols-3 gap-8">
+          <!-- ShopEase Task Card 1 -->
+          <div class="bg-[#F4F7FF] p-4 rounded-lg">
+            <p class="bg-white p-1 w-24 rounded-lg">ShopEase</p>
+            <p class="font-bold text-xl">Fix Mobile Button Issue</p>
+            <p class="text-start bg-white p-3">
+              Debug using Chrome DevTools, check for overlapping elements.
+            </p>
+            <div class="flex flex-row justify-between mt-1">
+              <div>
+                <p>Deadline</p>
+                <p class="font-bold text-xl">21 March 2025</p>
+              </div>
+              <button
+                id="btn-shop"
+                class="btn bg-blue-700 text-white border-none"
+              >
+                Completed
+              </button>
+            </div>
+          </div>
+
+          <!-- ShopEase Task Card 2 -->
+          <div class="bg-[#F4F7FF] p-4 rounded-lg">
+            <p class="bg-white p-1 w-24 rounded-lg">ShopEase</p>
+            <p class="font-bold text-xl">Fix Mobile Button Issue</p>
+            <p class="text-start bg-white p-3">
+              Debug using Chrome DevTools, check for overlapping elements.
+            </p>
+            <div class="flex flex-row justify-between mt-1">
+              <div>
+                <p>Deadline</p>
+                <p class="font-bold text-xl">21 March 2025</p>
+              </div>
+              <button class="btn bg-blue-700 text-white border-none">
+                Completed
+              </button>
+            </div>
+          </div>
+
+          <!-- ShopEase Task Card 3 -->
+          <div class="bg-[#F4F7FF] p-4 rounded-lg">
+            <p class="bg-white p-1 w-24 rounded-lg">ShopEase</p>
+            <p class="font-bold text-xl">Fix Mobile Button Issue</p>
+            <p class="text-start bg-white p-3">
+              Debug using Chrome DevTools, check for overlapping elements.
+            </p>
+            <div class="flex flex-row justify-between mt-1">
+              <div>
+                <p>Deadline</p>
+                <p class="font-bold text-xl">21 March 2025</p>
+              </div>
+              <button class="btn bg-blue-700 text-white border-none">
+                Completed
+              </button>
+            </div>
+          </div>
+
+          <!-- ShopEase Task Card 4 -->
+          <div class="bg-[#F4F7FF] p-4 rounded-lg">
+            <p class="bg-white p-1 w-24 rounded-lg">ShopEase</p>
+            <p class="font-bold text-xl">Fix Mobile Button Issue</p>
+            <p class="text-start bg-white p-3">
+              Debug using Chrome DevTools, check for overlapping elements.
+            </p>
+            <div class="flex flex-row justify-between mt-1">
+              <div>
+                <p>Deadline</p>
+                <p class="font-bold text-xl">21 March 2025</p>
+              </div>
+              <button class="btn bg-blue-700 text-white border-none">
+                Completed
+              </button>
+            </div>
+          </div>
+
+          <!-- ShopEase Task Card 5 -->
+          <div class="bg-[#F4F7FF] p-4 rounded-lg">
+            <p class="bg-white p-1 w-24 rounded-lg">ShopEase</p>
+            <p class="font-bold text-xl">Fix Mobile Button Issue</p>
+            <p class="text-start bg-white p-3">
+              Debug using Chrome DevTools, check for overlapping elements.
+            </p>
+            <div class="flex flex-row justify-between mt-1">
+              <div>
+                <p>Deadline</p>
+                <p class="font-bold text-xl">21 March 2025</p>
+              </div>
+              <button class="btn bg-blue-700 text-white border-none">
+                Completed
+              </button>
+            </div>
+          </div>
+
+          <!-- ShopEase Task Card 6 -->
+          <div class="bg-[#F4F7FF] p-4 rounded-lg">
+            <p class="bg-white p-1 w-24 rounded-lg">ShopEase</p>
+            <p class="font-bold text-xl">Fix Mobile Button Issue</p>
+            <p class="text-start bg-white p-3">
+              Debug using Chrome DevTools, check for overlapping elements.
+            </p>
+            <div class="flex flex-row justify-between mt-1">
+              <div>
+                <p>Deadline</p>
+                <p class="font-bold text-xl">21 March 2025</p>
+              </div>
+              <button class="btn bg-blue-700 text-white border-none">
+                Completed
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
