fixing minor design

--- a/blog.html
+++ b/blog.html
@@ -52,8 +52,8 @@
           DOM?
         </h1>
         <hr />
-        <p class="text-xl font-medium">5 ways to select elements in dom -</p>
-        <ol class="text-xl font-medium">
+        <p class="text-xl font-normal">5 ways to select elements in dom -</p>
+        <ol class="text-xl font-normal">
           <li>getElementById()</li>
           <li>getElementsByClassName()</li>
           <li>getElementsByTagName()</li>
@@ -67,8 +67,8 @@
           textContent ?
         </h1>
         <hr />
-        <p class="text-xl font-medium">5 ways to select elements in dom -</p>
-        <ol class="text-xl font-medium">
+        <p class="text-xl font-normal">5 ways to select elements in dom -</p>
+        <ol class="text-xl font-normal">
           <li>
             innerHtml- Its used to set or get the content with html in a website
           </li>
@@ -84,7 +84,7 @@
           Question-3: What is event bubbling in the DOM?
         </h1>
         <hr />
-        <p class="text-xl font-medium">
+        <p class="text-xl font-normal">
           Event Bubbling is a technique in JavaScript where an event is first
           triggered on the target element and then propagates up through its
           parent elements in the DOM. Instead of handling events separately for
@@ -98,7 +98,7 @@
           Question-4: What is event delegation in the DOM?
         </h1>
         <hr />
-        <p class="text-xl font-medium">
+        <p class="text-xl font-normal">
           Event Delegation is a technique in JavaScript where an event is
           handled by a parent element instead of attaching event listeners to
           multiple child elements. This allows the parent to detect events from
@@ -113,10 +113,10 @@
           JavaScript?
         </h1>
         <hr />
-        <p class="text-xl font-medium">
+        <p class="text-xl font-normal">
           Here are the way to create , add and remove elements in JavaScript-
         </p>
-        <ol class="text-xl font-medium">
+        <ol class="text-xl font-normal">
           <li>
             Create : Use document.createElement() to create a new element.
           </li>
