--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <!-- Task Cards Grid -->
         <div class="col-span-3 grid grid-cols-3 gap-8">
-          <!-- ShopEase Task Card 1 -->
+          <!--  Task Card 1 -->
           <div class="bg-[#F4F7FF] p-4 rounded-lg">
             <p class="bg-white p-1 w-24 rounded-lg">ShopEase</p>
             <p id="fix-mobileBtn" class="font-bold text-xl">
@@ -111,7 +111,7 @@
             <div class="flex flex-row justify-between mt-1">
               <div>
                 <p>Deadline</p>
-                <p class="font-bold text-xl">21 March 2025</p>
+                <p class="font-medium text-lg">21 March 2025</p>
               </div>
               <button
                 id="btn-shop"
@@ -122,7 +122,7 @@
             </div>
           </div>
 
-          <!-- ShopEase Task Card 2 -->
+          <!--  Task Card 2 -->
           <div class="bg-[#F4F7FF] p-4 rounded-lg">
             <p class="bg-white p-1 w-24 rounded-lg">CloudSync</p>
             <p id="CloudSync-id" class="font-bold text-xl">Add Dark Mode</p>
@@ -132,7 +132,7 @@
             <div class="flex flex-row justify-between mt-1">
               <div>
                 <p>Deadline</p>
-                <p class="font-bold text-xl">21 March 2025</p>
+                <p class="font-medium text-lg">21 March 2025</p>
               </div>
               <button
                 id="btn-cloudSync"
@@ -143,7 +143,7 @@
             </div>
           </div>
 
-          <!-- ShopEase Task Card 3 -->
+          <!--  Task Card 3 -->
           <div class="bg-[#F4F7FF] p-4 rounded-lg">
             <p class="bg-white p-1 w-24 rounded-lg">SwiftPay</p>
             <p id="Home-page" class="font-bold text-xl">Optimize Home page</p>
@@ -153,7 +153,7 @@
             <div class="flex flex-row justify-between mt-1">
               <div>
                 <p>Deadline</p>
-                <p class="font-bold text-xl">21 March 2025</p>
+                <p class="font-medium text-lg">21 March 2025</p>
               </div>
               <button
                 id="btn-swiftpay"
@@ -164,7 +164,7 @@
             </div>
           </div>
 
-          <!-- ShopEase Task Card 4 -->
+          <!--  Task Card 4 -->
           <div class="bg-[#F4F7FF] p-4 rounded-lg">
             <p class="bg-white p-1 w-24 rounded-lg">Meta</p>
             <p id="emoji" class="font-bold text-xl">Add new emoji 🤲</p>
@@ -174,7 +174,7 @@
             <div class="flex flex-row justify-between mt-1">
               <div>
                 <p>Deadline</p>
-                <p class="font-bold text-xl">21 March 2025</p>
+                <p class="font-medium text-lg">21 March 2025</p>
               </div>
               <button
                 id="btn-meta"
@@ -185,9 +185,9 @@
             </div>
           </div>
 
-          <!-- ShopEase Task Card 5 -->
+          <!--  Task Card 5 -->
           <div class="bg-[#F4F7FF] p-4 rounded-lg">
-            <p class="bg-white p-1 w-24 rounded-lg">Google LLC</p>
+            <p class="bg-white p-1 w-32 rounded-lg">Google LLC</p>
             <p id="OpenAI" class="font-bold text-xl">Integrate OpenAI API</p>
             <p class="text-start bg-white p-3">
               Debug using Chrome DevTools, check for overlapping elements.
@@ -195,7 +195,7 @@
             <div class="flex flex-row justify-between mt-1">
               <div>
                 <p>Deadline</p>
-                <p class="font-bold text-xl">21 March 2025</p>
+                <p class="font-medium text-lg">21 March 2025</p>
               </div>
               <button
                 id="btn-google"
@@ -206,7 +206,7 @@
             </div>
           </div>
 
-          <!-- ShopEase Task Card 6 -->
+          <!--  Task Card 6 -->
           <div class="bg-[#F4F7FF] p-4 rounded-lg">
             <p class="bg-white p-1 w-24 rounded-lg">Glassdoar</p>
             <p id="job-search" class="font-bold text-xl">
@@ -218,7 +218,7 @@
             <div class="flex flex-row justify-between mt-1">
               <div>
                 <p>Deadline</p>
-                <p class="font-bold text-xl">21 March 2025</p>
+                <p class="font-medium text-lg">21 March 2025</p>
               </div>
               <button
                 id="btn-glassdoar"
