--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <section class="md:container mx-auto mt-10">
       <div class="grid grid-cols-4 gap-x-8 gap-y-10">
         <!-- First  -->
-        <span class="flex flex-row justify-between col-span-3">
+        <span class="col-span-3 grid grid-cols-12 space-x-4">
           <div
-            class="flex flex-row w-56 justify-center items-center gap-2 rounded-lg bg-[#F4F7FF]"
+            class="flex col-span-3 flex-row justify-center items-center gap-2 rounded-lg bg-[#F4F7FF]"
           >
             <img class="w-12 h-12" src="assets/checkbox.png" alt="" />
             <div>
@@ -67,7 +67,7 @@
           <!-- Second  -->
           <div
             id="new-file"
-            class="bg-gradient-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] w-7/12 p-4 cursor-pointer rounded-lg"
+            class="bg-gradient-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] col-span-6 p-4 cursor-pointer rounded-lg"
           >
             <div class="flex flex-row justify-center items-center gap-2">
               <img src="assets/board.png" alt="" />
@@ -77,7 +77,7 @@
 
           <!-- Third  -->
           <div
-            class="flex flex-row w-56 rounded-lg justify-center items-center gap-2 bg-[#F4F7FF]"
+            class="flex flex-row col-span-3 rounded-lg justify-center items-center gap-2 bg-[#F4F7FF]"
           >
             <img class="w-12 h-12" src="assets/calender.png" alt="" />
             <p id="show-time"></p>
